# MRP

./: CMakeLists.txt  main.cpp  main.cu
.devcontainer/: Dockerfile  devcontainer.json
base/: CMakeList.txt  CMakeLists.txt  main.cpp
base/cmake/toolchains/: jetson-nano.cmake
base/cudafunctions/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmarkMemCopy.cpp  benchmarkMemCopy.h
base/datasource/: DataSourceBase.h  FileSource.h  MockSource.h  V4LSource.h
toolchains/: jetson-nano.cmake
